-Worked on map system

--- a/Project Lemon/Project Lemon.vcxproj
+++ b/Project Lemon/Project Lemon.vcxproj
@@ -18,10 +18,12 @@
     <ClCompile Include="main.cpp">
       <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</DeploymentContent>
     </ClCompile>
+    <ClCompile Include="MapSystem.cpp" />
     <ClCompile Include="Position.cpp" />
     <ClCompile Include="RenderSystem.cpp" />
     <ClCompile Include="System.cpp" />
     <ClCompile Include="Texture.cpp" />
+    <ClCompile Include="TextureManager.cpp" />
     <ClCompile Include="Tile.cpp" />
     <ClCompile Include="Velocity.cpp" />
   </ItemGroup>
@@ -33,10 +35,12 @@
     <ClInclude Include="ComponentManager.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="HealthComponent.h" />
+    <ClInclude Include="MapSystem.h" />
     <ClInclude Include="Position.h" />
     <ClInclude Include="RenderSystem.h" />
     <ClInclude Include="System.h" />
     <ClInclude Include="Texture.h" />
+    <ClInclude Include="TextureManager.h" />
     <ClInclude Include="Tile.h" />
     <ClInclude Include="Velocity.h" />
   </ItemGroup>
