--- a/Project Lemon/Project Lemon.vcxproj
+++ b/Project Lemon/Project Lemon.vcxproj
@@ -24,6 +24,7 @@
     <ClCompile Include="Position.cpp" />
     <ClCompile Include="Region.cpp" />
     <ClCompile Include="RenderSystem.cpp" />
+    <ClCompile Include="Subject.cpp" />
     <ClCompile Include="System.cpp" />
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="TextureManager.cpp" />
@@ -44,6 +45,7 @@
     <ClInclude Include="Position.h" />
     <ClInclude Include="Region.h" />
     <ClInclude Include="RenderSystem.h" />
+    <ClInclude Include="Subject.h" />
     <ClInclude Include="System.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="TextureManager.h" />
