--- a/Project Lemon/Project Lemon.vcxproj
+++ b/Project Lemon/Project Lemon.vcxproj
@@ -19,13 +19,12 @@
     <ClCompile Include="main.cpp">
       <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</DeploymentContent>
     </ClCompile>
-    <ClCompile Include="MapSystem.cpp" />
+    <ClCompile Include="MapManager.cpp" />
     <ClCompile Include="PerlinNoise.cpp" />
     <ClCompile Include="Position.cpp" />
     <ClCompile Include="Region.cpp" />
     <ClCompile Include="RenderSystem.cpp" />
     <ClCompile Include="Subject.cpp" />
-    <ClCompile Include="System.cpp" />
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="TextureManager.cpp" />
     <ClCompile Include="Tile.cpp" />
@@ -40,7 +39,8 @@
     <ClInclude Include="ElevationComponent.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="HealthComponent.h" />
-    <ClInclude Include="MapSystem.h" />
+    <ClInclude Include="MapManager.h" />
+    <ClInclude Include="Observer.h" />
     <ClInclude Include="PerlinNoise.h" />
     <ClInclude Include="Position.h" />
     <ClInclude Include="Region.h" />
@@ -87,6 +87,7 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <AdditionalIncludeDirectories>C:\Users\Alex\Documents\Visual Studio 2013\Projects\SDL2\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <DisableSpecificWarnings>4373</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
