--- a/Project Lemon/Project Lemon.vcxproj.filters
+++ b/Project Lemon/Project Lemon.vcxproj.filters
@@ -54,17 +54,11 @@
     <ClCompile Include="Tile.cpp">
       <Filter>Source Files\Components</Filter>
     </ClCompile>
-    <ClCompile Include="HealthComponent.cpp">
-      <Filter>Source Files\Components</Filter>
-    </ClCompile>
     <ClCompile Include="TextureManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="PerlinNoise.cpp">
       <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="ElevationComponent.cpp">
-      <Filter>Source Files\Components</Filter>
     </ClCompile>
     <ClCompile Include="Region.cpp">
       <Filter>Source Files</Filter>
@@ -74,6 +68,9 @@
     </ClCompile>
     <ClCompile Include="MapManager.cpp">
       <Filter>Source Files\System</Filter>
+    </ClCompile>
+    <ClCompile Include="Elevation.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -103,9 +100,6 @@
     <ClInclude Include="Tile.h">
       <Filter>Header Files\Components</Filter>
     </ClInclude>
-    <ClInclude Include="HealthComponent.h">
-      <Filter>Header Files\Components</Filter>
-    </ClInclude>
     <ClInclude Include="RenderSystem.h">
       <Filter>Header Files\System</Filter>
     </ClInclude>
@@ -114,9 +108,6 @@
     </ClInclude>
     <ClInclude Include="PerlinNoise.h">
       <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="ElevationComponent.h">
-      <Filter>Header Files\Components</Filter>
     </ClInclude>
     <ClInclude Include="Region.h">
       <Filter>Header Files</Filter>
@@ -131,6 +122,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="System.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Elevation.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
